app/assets/stylesheets/main.css
html, body {
    max-width: 100%;
    height: 100%;
    overflow-x: hidden;
    text-rendering: optimizeLegibility;
}

body{
 padding-top:86px;
}

.header{
	display:block;
	background-color: #0D6A9B;
	height:86px;
	width: 100%;
	/*border-bottom: 1px solid #e1e5e9;*/
	position: fixed;
	z-index: 1000;
	top:0;
}

.logo{
	position:relative;
	top:28px;
}

.nav_bar ul {
	list-style-type: none;
	margin: 0 ; padding: 0;
	position: relative;
	top:32px;
	float:right;
}

.nav_bar ul li {
	float:left;
}

.nav_bar ul li a {
	display:block;
	padding:0 12px;
	font-family: 'Varela round', sans-serif;
	font-size:14px;
	letter-spacing:0pt;
	line-height:120%;
	font-weight:normal;
	color:#fff;
	text-align:left;
	text-decoration:none;
	text-transform: capitalize;
    letter-spacing: 1px;
}

.nav_bar ul li a:hover{
    color:rgba(51,51,51,1);	
}

.login_menu ul {
	list-style-type: none;
	margin: 0 ; padding: 0;
	position:relative;
	top:15px;
}

.login_menu ul li {
	float:right;
	
}

.login_menu ul li a.btn {
	text-transform: capitalize;
	text-decoration: none;
	font-family: 'varela round', sans-serif;
	font-weight:400;
	font-size: 16px;
}

.login_menu ul li a.btn.btn-primary:hover{
   color:#fff;
}

.rocket{
	position: relative;
	top: -85px;
	float: right;
	max-width: 100%;
	max-height:100%;
}

.btn {
	display: inline-block;
	overflow: visible;
	margin: 0;
	border: 0;
	border-radius: 3px;
	vertical-align: middle;
	text-align: center;
	text-decoration: none;
	text-transform: none;
	white-space: nowrap;
	cursor: pointer;
	line-height: 48px;
}




.btn-primary{
   background: #00D936/*#003E5B*/;
   color:#fff;
   padding: 0 32px;
   height: 48px;
}

.btn-simple{
   background:none;	
   border:1px solid #e1e5e9;
   margin-right:13px;
   padding: 0 32px;
   height: 48px;
}

.btn-simple:hover{
	color:rgba(51,51,51,1);

}

.btn-primary-sm{
   background: #00D936/*#003E5B*/;
   color:#fff;
   padding: 0 16px;
   height: 30px;
   line-height: 30px;
}

a.btn.btn-primary-sm{
  font-size: 12px !important; 
}

.btn-inverse{
	color: #fff !important;
}

.fl{
	float: right;
}
/* ... */

